--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -92,7 +92,7 @@ $expired = 1;
 		
 		<?php echo $this->getChildHtml('sorting') ?>
 		
-		<figure id="inviteFriends" class="sideAd">
+		<figure id="inviteFriends" class="sideAd-orange">
 			<p>Invite 10 friends to Rooja and get free shipping for 2 months</p>
 		</figure>
 	</section>
