--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -593,7 +593,7 @@ h3 .product-name {
 }
 
 .sideAd-orange {
-    background:url(../images/bgs/orange-corner.png) no-repeat top left #CC6600;
+    background:url(../images/bgs/orange-corner.jpg) no-repeat top left #CC6600;
     padding:25px 10px 15px;
     margin-top:3px;
 }
