--- a/app/design/frontend/default/rooja/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/item/default.phtml
@@ -22,6 +22,13 @@
  * @package     base_default
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+*<table class="qty_table">
+*	<tr>
+*		<td><span class="decreaseItem" id="decreaseItem" onclick="review.decreaseItem(<?=$_item->getProductId()?>)"></span></td> 
+*		<td> <span class="qty_value">   <?php echo $_item->getQty() ?></span></td>
+*		<td><span class="increaseItem" id="increaseItem" onclick="review.increaseItem(<?=$_item->getProductId()?>)"></span></td>
+*	</tr>
+*</table>
  */
 ?>
 <?php
@@ -159,15 +166,6 @@ $isVisibleProduct = $_item->getProduct()->isVisibleInSiteVisibility();
     <?php endif; ?>
     <td class="a-center">
         <?php echo $this->getQty() ?>
-	  	<table class="qty_table">
-	   		<tr>
-	   			<td><span class="decreaseItem" id="decreaseItem" onclick="review.decreaseItem(<?=$_item->getProductId()?>)"></span></td>
-
-	   			<td> <span class="qty_value">   <?php echo $_item->getQty() ?></span></td>
-
-	   			<td><span class="increaseItem" id="increaseItem" onclick="review.increaseItem(<?=$_item->getProductId()?>)"></span></td>
-	   		</tr>
-	   	</table>
     </td>
     <?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
     <td class="a-right">
