--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -169,36 +169,36 @@ ul#myAccount li{
 }
 
 ul#myAccount li.welcome-top {
-	padding: 36px 42px 28px 30px;
-	margin: -26px -8px 0 -11px;
-	background: url("../images/icons/arrow-nav-white.png") no-repeat 125px 34px;
+	padding: 36px 25px 27px 20px;
+	background: url("../images/icons/arrow-nav-white.png") no-repeat middle right;
+	margin: -26px 0 0 0;
 }
 
 ul#myAccount li.welcome-top:hover {
-	padding: 36px 42px 28px 30px;
-	margin: -26px -8px 0 -11px;
-	background: #220F26 url("../images/icons/arrow-nav-white.png") no-repeat 125px 34px;
+	padding: 36px 25px 27px 20px;
+	background:#220F26 url("../images/icons/arrow-nav-white.png") no-repeat middle right;
+	margin: -26px 0 0 0;
 	}
 
 	ul#myAccount li.ignore-item {
-		background: url("../images/invite-friends.png") no-repeat center center;
+		background: url("../images/invite-friends.png") no-repeat 9px center;
 		height: 45px;
 		margin: -26px 13px 0 0;
-		padding: 14px 5px 11px 5px;
+		padding: 14px 11px 10px 15px;
 	}
 	
 		ul#myAccount li.ignore-item:hover {
-			background: #220F26 url("../images/invite-friends.png") no-repeat center center;
+			background: #220F26 url("../images/invite-friends.png") no-repeat 9px center;
 			height: 45px;
 			margin: -26px 13px 0 0;
-			padding: 14px 5px 11px 5px;
+			padding: 14px 11px 10px 15px;
 		}
 	
 	ul#myAccount li.ignore-item a{
 		display: block;
 		text-indent:-9999px;
 		width: 150px;
-		margin: 10px -7px 11px 5px;
+		margin: 10px -21px 0 16px;
 		height: 25px;
 		border-right:1px dotted white;
 		line-height: 18px;
@@ -251,7 +251,7 @@ li#myBag{
 	padding: 37px 10px 31px 0 !important;
 	background: #431F4C url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
-	font-size: 1.1em;
+	font-size: 1.2em;
 }
 
 .dotted {
@@ -267,12 +267,12 @@ li#myBag{
 li#myBag:hover{
 	display: block;
 	width: 114px;
-	height: 4px;
+	height: 3px;
 	margin: -28px 5px 0 9px;
 	padding: 37px 10px 31px 0 !important;
 	background: #220F26 url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
-	font-size: 1.1em;
+	font-size: 1.2em;
 	border-bottom: 1px solid #431F4C;
 }
 
@@ -414,7 +414,7 @@ td .product-name { width: 130px;}
 #mainFooter ul#socialLinks a:hover{text-decoration:none;color:#fff;}
 #mainFooter ul#socialLinks img{vertical-align:middle;margin:5px 8px 5px 0px;}
 #twitter_update_list{padding:12px;background:url(../images/bgs/twitter-diag.png) repeat;margin-bottom:8px;}
-#copyrightInfo {margin-top:-4px;}
+#copyrightInfo {margin-top:10px;}
 #copyrightInfo a{text-decoration:none;}
 
 /* ~~~~~ PAGE ~~~~~ */
@@ -591,13 +591,7 @@ h3 .product-name {
     padding:25px 10px 15px;
     margin-top:3px;
 }
-
-.sideAd-orange {
-    background:url(../images/bgs/orange-corner.jpg) no-repeat top left #CC6600;
-    padding:25px 10px 15px;
-    margin-top:3px;
-}
-.sideAd p, .sideAd-orange p{font-weight:bold;color:#fff;margin:0;background:url(../images/icons/rupee-icon.png) no-repeat left center;padding-left:28px;}
+.sideAd p{font-weight:bold;color:#fff;margin:0;background:url(../images/icons/rupee-icon.png) no-repeat left center;padding-left:28px;}
 
 .product{width:230px;height:230px;overflow:hidden;position:relative;margin-bottom:20px;}
 .product img{position:relative;}
@@ -686,6 +680,8 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 /* ~~~~~ Typography ~~~~~ */
 
 a {text-decoration:none; color:#000;}
+a:hover {color: ;}
+a.selected{color:;}
 h1 {font-size: 2.5em; color: #431f4c; margin-bottom: 10px; font-weight:normal;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;line-height:.9em;}
 h1#checkout {margin-top:40px;}
 
