changed position of dropdown arrow

--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -69,7 +69,7 @@
 			</ul>
 		</section>
 		
-		<p id="copyrightInfo" class="fl">Copyright &copy; 2011 Rooja. all work is an act of <a href="http://gophilosophie.com" target="_blank" title="Site design and development by philosophie interactive">philosophie</a></p>
+		<p id="copyrightInfo" class="fl clear">Copyright &copy; 2011 Rooja. all work is an act of <a href="http://gophilosophie.com" target="_blank" title="Site design and development by philosophie interactive">philosophie</a></p>
 	</div>
 </footer>
 <script type="text/javascript">
