--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
@@ -48,9 +48,9 @@
     <?php endif; ?>
 <?php endforeach; ?>
 
-<p>We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.</p>
+<p class="codHintText">We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.</p>
 
-<p>You will be redirected to CCAvenue our secure online payment-processing partner.</p>
+<p class="ccHintText">You will be redirected to CCAvenue our secure online payment-processing partner.</p>
 
 </dl>
 <?php echo $this->getChildChildHtml('additional'); ?>
