--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
@@ -53,6 +53,17 @@
 <p class="ccHintText">You will be redirected to CCAvenue our secure online payment-processing partner.</p>
 
 </dl>
+<script type="text/javascript">
+	jQuery(document).ready(function(){
+		jQuery('#p_method_cashondelivery').change(function () {                
+		     jQuery('.codHintText').toggle(!this.checked);
+		  }).change(); //ensure visible state matches initially
+		jQuery('#p_method_Avenues_standard').change(function () {                
+		     jQuery('.ccHintText').toggle(!this.checked);
+		  }).change(); 
+	 });
+			
+</script>
 <?php echo $this->getChildChildHtml('additional'); ?>
 <script type="text/javascript">
 //<![CDATA[
