--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
@@ -56,10 +56,10 @@
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery('#p_method_cashondelivery').change(function () {                
-		     jQuery('.codHintText').toggle(this.checked);
-		  }).change(); //ensure visible state matches initially
+		     jQuery('.codHintText').toggle();
+		  }).change(); 
 		jQuery('#p_method_Avenues_standard').change(function () {                
-		     jQuery('.ccHintText').toggle(this.checked);
+		     jQuery('.ccHintText').toggle();
 		  }).change(); 
 	 });
 			
