--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
@@ -63,6 +63,16 @@
 		  }).change(); 
 	 });
 			
+	if (jQuery("#p_method_cashondelivery:checked").length > 0){ jQuery(".codHintText").show(); }
+
+	  // add functionality for the onclicks here
+	  jQuery("#p_method_cashondelivery").click(function() {
+	    jQuery(".codHintText").show();
+	  });
+
+	  jQuery("#p_method_Avenues_standard").click(function() {
+	    jQuery(".ccHintText").hide();
+	  });
 </script>
 <?php echo $this->getChildChildHtml('additional'); ?>
 <script type="text/javascript">
