--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment_method.phtml
@@ -60,10 +60,12 @@
 		  // add functionality for the onclicks here
 		  jQuery("#p_method_cashondelivery").click(function() {
 		    jQuery(".codHintText").show();
+			jQuery(".ccHintText").hide();
 		  });
 
 		  jQuery("#p_method_Avenues_standard").click(function() {
-		    jQuery(".ccHintText").hide();
+		    jQuery(".ccHintText").show();
+			jQuery(".codHintText").hide();
 		  });
 	 });
 			
