padding on shipping image in header

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -184,14 +184,14 @@ ul#myAccount li.welcome-top:hover {
 		background: url("../images/invite-friends.png") no-repeat 9px center;
 		height: 45px;
 		margin: -26px 13px 0 0;
-		padding: 14px 11px 10px 15px;
+		padding: 14px 11px 10px 0;
 	}
 	
 		ul#myAccount li.ignore-item:hover {
 			background: #220F26 url("../images/invite-friends.png") no-repeat 9px center;
 			height: 45px;
 			margin: -26px 13px 0 0;
-			padding: 14px 11px 10px 15px;
+			padding: 14px 11px 10px 0px;
 		}
 	
 	ul#myAccount li.ignore-item a{
