toggle shipping address checkbox

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -54,8 +54,8 @@
                     <div id="shipping-info" style="display: none;"> 
                     <?php echo $this->getChildHtml("shipping2")?>    
                     </div>
-					  <a  id="toggleShipping" onclick="toggleShipping()"><input type="checkbox" name="toggleShipping" id="toggleShipping" value="1" onclick="toggleShipping()" checked="checked" class="checkbox" />
-			          <label for="toggleShipping">My Shipping address is the same as my billing address.</label></a>
+					  <a  id="toggleShipping" onclick="toggleShipping()"><input type="checkbox" name="toggleShipping" id="toggleShipping" value="1" onclick="toggleShipping()" checked="checked" class="checkbox" style="margin: 0 0 -10px 0;" />
+			          <label for="toggleShipping" style="margin: 0 0 14px 25px;">My Shipping address is the same as my billing address.</label></a>
 			                    
 
 				
