--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -22,9 +22,9 @@
 		<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/question-mark.png" alt="Question mark icon"> Need Assistance</a> 
 		</div>
 
-	<h1 id="checkout">Shopping on Rooja is 100% Secure and Convenient</h1>
+	<!-- <h1 id="checkout">Shopping on Rooja is 100% Secure and Convenient</h1>
 
-		<p style="padding: 0 0 20px 0;">To ensure the best possible customer experience Rooja.com is committed is committed to the highest level of customer data security. We strive for the strongest industry-accepted security practices in order to protect the security of our most important asset - our customers. Rooja.com brings you multiple secure payment options like Credit Cards, ATM/ Debit Cards, Net Banking and Cash on Delivery.</p>
+			<p style="padding: 0 0 20px 0;">To ensure the best possible customer experience Rooja.com is committed is committed to the highest level of customer data security. We strive for the strongest industry-accepted security practices in order to protect the security of our most important asset - our customers. Rooja.com brings you multiple secure payment options like Credit Cards, ATM/ Debit Cards, Net Banking and Cash on Delivery.</p> -->
 
 
 
@@ -54,8 +54,8 @@
                     <div id="shipping-info" style="display: none;"> 
                     <?php echo $this->getChildHtml("shipping2")?>    
                     </div>
-					  <a  id="toggleShipping" onclick="toggleShipping()"><input type="checkbox" name="toggleShipping" id="toggleShipping" value="1" onclick="toggleShipping()" checked="checked" class="checkbox" style="margin: 0 0 -10px 0;" />
-			          <label for="toggleShipping" style="margin: 0 0 14px 25px;">My Shipping address is the same as my billing address.</label></a>
+					  <a  id="toggleShipping" onclick="toggleShipping()"><input type="checkbox" name="toggleShipping" id="toggleShipping" value="1" onclick="toggleShipping()" checked="checked" class="checkbox" style="margin: 0 0 -10px 0;" /></a>
+			          <label for="toggleShipping" style="margin: 0 0 14px 25px;">My Shipping address is the same as my billing address.</label>
 			                    
 
 				
