--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -771,4 +771,4 @@ a[href$=".doc"]:after {content: " (DOC)";}
 
 .billing_section {width: 50%;}
 
-a#toggleShipping {font-size:14px; padding: 5px 0 10px;}
+a#toggleShipping {font-size:14px; margin: 0 0 0 4px;padding: 5px 0;}
