--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -214,7 +214,7 @@ p.control input.radio { margin-right:6px; }
 .form-list .field { float:left; width:275px; }
 .form-list input.input-text { width:254px; }
 .form-list textarea { width:254px; height:10em; }
-.form-list select { width:260px; }
+.form-list select { width:200px; }
 .form-list li.wide .input-box { width:535px; }
 .form-list li.wide input.input-text { width:100%; }
 .form-list li.wide-2 input.input-text { width:94%; }
@@ -1153,7 +1153,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .opc .order-review .authentication {}
 .opc .order-review .warning-message {}
 
-.form-list input.input-text{height:36px;line-height:36px;color:#111;height: 24px;width: 182px; }
+.form-list input.input-text{height:36px;line-height:24px !important;color:#111;height: 24px;width: 182px; }
 .block-progress h2{font-size:2em;color:#431f4b;margin-bottom:5px;}
 
 /* Multiple Addresses Checkout */
