--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -55,7 +55,7 @@
                     <?php echo $this->getChildHtml("shipping2")?>    
                     </div>
 					  <a  id="toggleShipping" onclick="toggleShipping()"><input type="checkbox" name="toggleShipping" id="toggleShipping" value="1" onclick="toggleShipping()" checked="checked" class="checkbox" style="margin: 0 0 -10px 0;" /></a>
-			          <label for="toggleShipping" style="margin: 0 0 14px 25px;">My Shipping address is the same as my billing address.</label>
+			          <label for="toggleShipping" style="margin: 0 0 14px 25px; font-size:14px;">My Shipping address is the same as my billing address.</label>
 			                    
 
 				
